Fix alignment for short post titles
Short titles were being center-aligned.

--- a/web/themes/custom/union_marketing/scss/components/_posts.scss
+++ b/web/themes/custom/union_marketing/scss/components/_posts.scss
@@ -8,6 +8,7 @@
       .cu-section-heading {
         margin: 0;
         text-align: left;
+        align-items: flex-start;
       }
 
       > * {
